Tests ergänzt, PMD eingebaut